--- a/main/partner/spynger.html
+++ b/main/partner/spynger.html
@@ -93,7 +93,8 @@
 
     }
 </script>
- <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" />
+<script src='//track.americancitizenoffers.com/38122746.js'></script>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -132,19 +133,19 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Sign up today for free.</div>
             <br></br>
-            <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fafflat3c2.com%2Ftrk%2Flnk%2F4CD78545-ECE6-403C-B549-F2D31A791D57%2F%3Fo%3D27337%26c%3D918277%26a%3D756656%26k%3D8C5CA3E4203C5107FD54BA905BEE70E6%26l%3D29364%26s2%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fumobix.go2cloud.org%2Faff_c%3Foffer_id%3D44%26aff_id%3D5044%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
         <div class="reviews">
-            <img src="assets/img/spynger-review.png" alt="Review 1">
-            <img src="assets/img/spynger-review2.png" alt="Review 2">
-            <img src="assets/img/spynger-review3.png" alt="Review 3">
+            <img src="assets/img/cheating-review.png" alt="Review 1">
+            <img src="assets/img/cheating-review2.png" alt="Review 2">
+            <img src="assets/img/cheating-review1.png" alt="Review 3">
 </div>
 <br></br>
 <br></br>
             <div>
-                        <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fafflat3c2.com%2Ftrk%2Flnk%2F4CD78545-ECE6-403C-B549-F2D31A791D57%2F%3Fo%3D27337%26c%3D918277%26a%3D756656%26k%3D8C5CA3E4203C5107FD54BA905BEE70E6%26l%3D29364%26s2%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+                        <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fumobix.go2cloud.org%2Faff_c%3Foffer_id%3D44%26aff_id%3D5044%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
 
             					<center>
 
