--- a/main/partner/spynger.html
+++ b/main/partner/spynger.html
@@ -131,7 +131,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
             <div class="benefit">✅ 100% discreet</div>
         </div>
         <div class="cta-buttons">
-            <div class="subtext">Sign up today for free.</div>
+            <div class="subtext">Sign up for a discount today.</div>
             <br></br>
             <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fumobix.go2cloud.org%2Faff_c%3Foffer_id%3D44%26aff_id%3D5044%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
