--- a/main/license/blank.html
+++ b/main/license/blank.html
@@ -43,8 +43,14 @@
     }
     .claim-value p {
       margin: 10px 0;
-      font-size: 28px;
+      font-size: 40px;
       font-weight: bold;
+          }
+    .claim-value h3 {
+      margin: 10px 0;
+      font-size: 24px;
+      font-weight: bold;
+        color: #919191;
     }
     .vehicles {
       margin-bottom: 30px;
@@ -133,7 +139,7 @@
     <div class="claim-value">
       <h2>Your potential claim value:</h2>
       <p>£15,954</p>
-      <p>3 Vehicles at up to £5,318 each</p>
+      <h3>3 Vehicles at up to £5,318 each</h3>
     </div>
 
     <h2>Your eligible vehicles</h2>
