--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -128,7 +128,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2Faff_c%3Foffer_id%3D84%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2FSHHQq%3Faff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
