--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -93,6 +93,7 @@
 
     }
 </script>
+<script src='//track.americancitizenoffers.com/38122746.js'></script>
  <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
 
 <!-- Meta Pixel Code -->
