Revert "Update scannero.html"
This reverts commit 33a2ea649987990099b6ef466f7900a92d296f65.

--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -129,7 +129,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://track.bzfrs.co/SHHQq&aff_sub=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://track.bzfrs.co/SHHQq?aff_sub=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
@@ -138,7 +138,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <img src="assets/img/review5.png" alt="Review 2">
             <img src="assets/img/review6.png" alt="Review 3">
 </div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://track.bzfrs.co/SHHQq&aff_sub=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://track.bzfrs.co/SHHQq?aff_sub=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
 
 <br></br>
 <br></br>
