--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -129,7 +129,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2FSHHQq%3Faff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://afflat3e3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
@@ -138,7 +138,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <img src="assets/img/review5.png" alt="Review 2">
             <img src="assets/img/review6.png" alt="Review 3">
 </div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2FSHHQq%3Faff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://afflat3e3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
 
 <br></br>
 <br></br>
