--- a/main/partner/mbs.html
+++ b/main/partner/mbs.html
@@ -129,7 +129,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their details to get started</div>
-            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://afflat3b3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=28908&c=918277&a=756656&k=20D40DC9C6B4F90DCDB87229D749F2BE&l=32442&s2=[cmc_vid]" id="click"> Find the truth Now</a></button>
+            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://afflat3b3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=28908&c=918277&a=756656&k=20D40DC9C6B4F90DCDB87229D749F2BE&l=32442&x=s2%3D[cmc_vid]%26firstName%3Dfirstname%26lastName%3Dlastname%26email%3Demailaddress" id="click"> Find the truth Now</a></button>
         </div>
     </div>
     <div class="container2">
@@ -137,7 +137,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <img src="assets/img/mbs-review.png" alt="Review 1">
 
 </div>
-            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://afflat3b3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=28908&c=918277&a=756656&k=20D40DC9C6B4F90DCDB87229D749F2BE&l=32442&s2=[cmc_vid]" id="click"> Find the truth Now</a></button>
+            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://afflat3b3.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=28908&c=918277&a=756656&k=20D40DC9C6B4F90DCDB87229D749F2BE&l=32442&x=s2%3D[cmc_vid]%26firstName%3Dfirstname%26lastName%3Dlastname%26email%3Demailaddress" id="click"> Find the truth Now</a></button>
 
 <br></br>
 <br></br>
