--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -40,16 +40,18 @@
         .cta-buttons {
             margin-top: 30px;
         }
-        .cta-button {
-            background-color: #A96BFF;
-            border: none;
-            padding: 15px 30px;
-            font-size: 16px;
-            font-weight: bold;
-            margin: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
+.cta-button {
+    background-color: #A96BFF;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+}
         .benefits {
             margin-top: 50px;
             display: flex;
@@ -129,7 +131,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://afflat3d2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
+    <a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
         </div>
     </div>
     <div class="container2">
@@ -138,7 +140,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <img src="assets/img/review5.png" alt="Review 2">
             <img src="assets/img/review6.png" alt="Review 3">
 </div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://afflat3d2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
+<a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
 <br></br>
 <br></br>
