--- a/main/partner/scannero-us.html
+++ b/main/partner/scannero-us.html
@@ -88,17 +88,15 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'UK-Phone tracking',
+        cmc_project: 'Phone Tracking Software',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
 
     }
-
-
 </script>
 <script src='//track.americancitizenoffers.com/38122746.js'></script>
- <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" />
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -129,12 +127,6 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <div class="benefit">✅ 100% discreet</div>
             <div class="benefit">✅ Find real-time location</div>
             <div class="benefit">✅ Easy to install on android and iPhone</div>
-        </div>
-                        <div class="benefits">
-            <div class="benefit">✅ Start for just $1</div>
-                        <div class="benefit">✅ Finds secret social media accounts</div>
-
-            
         </div>
 <br></br>
         <div class="cta-buttons">
