--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -113,6 +113,13 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
   fbq('init', '498674006455904');
   fbq('track', 'PageView');
 </script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sgv3v4kfby");
+</script>
 
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
