--- a/main/partner/mbs.html
+++ b/main/partner/mbs.html
@@ -126,6 +126,10 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <div class="benefit">✅ Searches millions of records</div>
             <div class="benefit">✅ Works in seconds</div>
         </div>
+                <div class="benefits">
+            <div class="benefit">✅ Finds hidden social media profiles</div>
+
+        </div>
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their details to get started</div>
