--- a/main/partner/mbs.html
+++ b/main/partner/mbs.html
@@ -128,6 +128,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
         </div>
                 <div class="benefits">
             <div class="benefit">✅ Finds hidden social media profiles</div>
+            <div class="benefit">✅ Reveals location history</div>
 
         </div>
 <br></br>
