--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -146,7 +146,10 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
+            <br></br>
     <a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+    <p style="font-size: 14px; color: #A96BFF; margin-top: 5px;">Installed by 1,337 people today</p>
+
         </div>
     </div>
     <div class="container2">
