--- a/main/partner/geofinder.html
+++ b/main/partner/geofinder.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: #ffff;
+            color: #000000;
             margin: 0;
             padding: 0;
             text-align: center;
         }
         .header {
-            background-color: #A96BFF;
+            background-color: #2C6DFF;
             padding: 0px;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -40,18 +40,16 @@
         .cta-buttons {
             margin-top: 30px;
         }
-.cta-button {
-    background-color: #A96BFF;
-    text-decoration: none;
-    display: inline-block;
-    padding: 15px 30px;
-    font-size: 16px;
-    font-weight: bold;
-    margin: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    border: none;
-}
+        .cta-button {
+            background-color: #2C6DFF;
+            border: none;
+            padding: 15px 30px;
+            font-size: 16px;
+            font-weight: bold;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
         .benefits {
             margin-top: 50px;
             display: flex;
@@ -88,17 +86,15 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'UK-Phone tracking',
+        cmc_project: 'Phone Tracking Software',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
 
     }
-
-
 </script>
 <script src='//track.americancitizenoffers.com/38122746.js'></script>
- <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" />
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -113,13 +109,6 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
   fbq('init', '498674006455904');
   fbq('track', 'PageView');
 </script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "sgv3v4kfby");
-</script>
 
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
@@ -127,37 +116,34 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 </head>
 <body>
     <div class="header">
-        <img src="assets/img/incognito-purple.png" alt="Logo" class="logo">
+        <img src="assets/img/incognito-blue.png" alt="Logo" class="logo">
     </div>
-    <div class="container" style="background-color: #2B313D;">
-        <div class="headline">Is Your Partner Cheating? New App Reveals All With 2-Minute Check</div>
-        <div class="subtext">Find the truth today. Hidden app gives you full access to their phone and reveals all.</div>
+    <div class="container" style="background-color: #F3F4F8;">
+        <div class="headline">Is Your Partner Cheating? New App Reveals All In With 2-Minute Check</div>
+        <div class="subtext">Find the truth today. Hidden app tracks their phone and reveals all.</div>
         <div class="benefits">
             <div class="benefit">✅ 100% discreet</div>
-            <div class="benefit">✅ Find real-time location</div>
-            <div class="benefit">✅ Easy to install on android and iPhone</div>
+            <div class="benefit">✅ Reveals location history</div>
+            <div class="benefit">✅ Works on any phone</div>
         </div>
-                        <div class="benefits">
-            <div class="benefit">✅ Start for just $1</div>
-                        <div class="benefit">✅ Finds secret social media accounts</div>
+                <div class="benefits">
+            <div class="benefit">✅ Finds hidden social media profiles</div>
+            <div class="benefit">✅ Deep online search</div>
 
-            
         </div>
 <br></br>
         <div class="cta-buttons">
-            <div class="subtext">Simply enter their phone number to get started</div>
-            <br></br>
-    <a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
-
+            <div class="subtext">Simply click the button below and enter their number to get started (Just $1)</div>
+            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://umobix.go2cloud.org/aff_c?offer_id=109&aff_id=5044&s1=[cmc_vid]" id="click"> Find the truth Now</a></button>
         </div>
     </div>
     <div class="container2">
         <div class="reviews">
-            <img src="assets/img/review4.png" alt="Review 1">
-            <img src="assets/img/review5.png" alt="Review 2">
-            <img src="assets/img/review6.png" alt="Review 3">
+            <img src="assets/img/gf-review-3.png" alt="Review 1">
+            <img src="assets/img/gf-review-2.png" alt="Review 2">
+            <img src="assets/img/gf-review-1.png" alt="Review 3">
 </div>
-<a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+            <button class="cta-button" style="background-color: #3499D8; "> <a href="https://umobix.go2cloud.org/aff_c?offer_id=109&aff_id=5044&s1=[cmc_vid]" id="click"> Find the truth Now</a></button>
 
 <br></br>
 <br></br>
