--- a/main/partner/scannero-us.html
+++ b/main/partner/scannero-us.html
@@ -88,12 +88,13 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'UK-Phone tracking',
+        cmc_project: 'Phone Tracking Software',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
 
     }
+    
 
 
 </script>
@@ -110,13 +111,16 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1762675014617041');
-fbq('track', 'PageView');
+  fbq('init', '498674006455904');
+  fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1762675014617041&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sgv3v4kfby");
+</script>
 
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
