--- a/main/partner/scannero-monetise.html
+++ b/main/partner/scannero-monetise.html
@@ -88,13 +88,12 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'Phone Tracking Software',
+        cmc_project: 'UK-Phone tracking',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
 
     }
-    
 
 
 </script>
