--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -88,7 +88,7 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'Phone Tracking Software',
+        cmc_project: 'UK-Phone tracking',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
