--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -94,7 +94,6 @@
             	log_engage: '#click',
 
     }
-    
 
 
 </script>
@@ -148,7 +147,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
             <br></br>
-    <a href="https://afflat3b2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+    <a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
         </div>
     </div>
@@ -158,7 +157,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
             <img src="assets/img/review5.png" alt="Review 2">
             <img src="assets/img/review6.png" alt="Review 3">
 </div>
-<a href="https://afflat3b2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+<a href="https://montrk.co.uk/?a=25235&c=52094&s1=fbads&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
 <br></br>
 <br></br>
