--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are They Cheating?</title>
+    <title>Are They hiding something?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -88,13 +88,12 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'Phone Tracking Software',
+        cmc_project: 'UK-Phone tracking',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
 
     }
-    
 
 
 </script>
@@ -131,16 +130,15 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
         <img src="assets/img/incognito-purple.png" alt="Logo" class="logo">
     </div>
     <div class="container" style="background-color: #2B313D;">
-        <div class="headline">Is Your Partner Cheating? New App Reveals All With 2-Minute Check</div>
+        <div class="headline">Is Your Partner Who They Say They Are? New App Reveals All With 2-Minute Check</div>
         <div class="subtext">Find the truth today. Hidden app gives you full access to their phone and reveals all.</div>
         <div class="benefits">
             <div class="benefit">✅ 100% discreet</div>
-            <div class="benefit">✅ Find real-time location</div>
-            <div class="benefit">✅ Easy to install on android and iPhone</div>
+            <div class="benefit">✅ Find court records and employment history</div>
+            <div class="benefit">✅ Easy to use on android and iPhone</div>
         </div>
                         <div class="benefits">
-            <div class="benefit">✅ Start for just $1</div>
-                        <div class="benefit">✅ Finds secret social media accounts</div>
+            <div class="benefit">✅ Only a phone number needed</div>
 
             
         </div>
@@ -148,17 +146,14 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
             <br></br>
-    <a href="https://afflat3b2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+    <a href="https://montrk3.co.uk/?a=25235&c=53646&s1=&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
         </div>
     </div>
     <div class="container2">
         <div class="reviews">
-            <img src="assets/img/review4.png" alt="Review 1">
-            <img src="assets/img/review5.png" alt="Review 2">
-            <img src="assets/img/review6.png" alt="Review 3">
+
 </div>
-<a href="https://afflat3b2.com/trk/lnk/4CD78545-ECE6-403C-B549-F2D31A791D57/?o=25745&c=918277&a=756656&k=01D58ACC80BF5D36D169BDC080304F09&l=26972&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
 <br></br>
 <br></br>
