--- a/main/partner/test.html
+++ b/main/partner/test.html
@@ -132,7 +132,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Get started for less than $1/day.</div>
             <br></br>
-            <button class="cta-button" style="background-color: #7CB936; "> <a href="https://americancitizenoffers.com/main/partner/?cmc_redir=https%3A%2F%2Fafflat3c2.com%2Ftrk%2Flnk%2F4CD78545-ECE6-403C-B549-F2D31A791D57%2F%3Fo%3D25746%26c%3D918277%26a%3D756656%26k%3D242BD040A60ABAC7E2A2F5FFBF138251%26l%3D26968%26s2%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #7CB936; "> <a href="https://track.mspy.click/aff_c?offer_id=2&aff_id=21078&aff_sub=[cmc_vid]" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
