--- a/main/partner/test.html
+++ b/main/partner/test.html
@@ -93,8 +93,8 @@
 
     }
 </script>
- <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
-
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" />
+<script src='//track.americancitizenoffers.com/38122746.js'></script>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
