--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -88,7 +88,7 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'UK-Phone tracking',
+        cmc_project: 'Phone Tracking Software',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
@@ -146,7 +146,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
             <br></br>
-    <a href="https://montrk3.co.uk/?a=25235&c=53646&s1=&s2=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+    <a href="https://track.bzfrs.co/aff_c?offer_id=84&aff_id=21078&aff_sub=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
 
         </div>
     </div>
