--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are They hiding something?</title>
+    <title>Are They Cheating?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,7 +13,7 @@
             text-align: center;
         }
         .header {
-            background-color: #A96BFF;
+            background-color: #7CB936;
             padding: 0px;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -40,18 +40,16 @@
         .cta-buttons {
             margin-top: 30px;
         }
-.cta-button {
-    background-color: #A96BFF;
-    text-decoration: none;
-    display: inline-block;
-    padding: 15px 30px;
-    font-size: 16px;
-    font-weight: bold;
-    margin: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    border: none;
-}
+        .cta-button {
+            background-color: #ffd500;
+            border: none;
+            padding: 15px 30px;
+            font-size: 16px;
+            font-weight: bold;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
         .benefits {
             margin-top: 50px;
             display: flex;
@@ -94,12 +92,9 @@
             	log_engage: '#click',
 
     }
-
-
 </script>
-<script src='//track.americancitizenoffers.com/38122746.js'></script>
  <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" />
-
+<script src='//track.americancitizenoffers.com/38122746.js'></script>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -110,51 +105,48 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '498674006455904');
+  fbq('init', '4986740064559046');
   fbq('track', 'PageView');
-</script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "sgv3v4kfby");
 </script>
 
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
 /></noscript>
 </head>
 <body>
     <div class="header">
-        <img src="assets/img/incognito-purple.png" alt="Logo" class="logo">
+        <img src="assets/img/incognito-green.png" alt="Logo" class="logo">
     </div>
     <div class="container" style="background-color: #2B313D;">
-        <div class="headline">Is Your Partner Who They Say They Are? New App Reveals All With 2-Minute Check</div>
+        <div class="headline">Is Your Partner Cheating? New App Reveals All With 2-Minute Check</div>
         <div class="subtext">Find the truth today. Hidden app gives you full access to their phone and reveals all.</div>
         <div class="benefits">
-            <div class="benefit">✅ 100% discreet</div>
-            <div class="benefit">✅ Find court records and employment history</div>
-            <div class="benefit">✅ Easy to use on android and iPhone</div>
+            <div class="benefit">✅ Read texts and messages</div>
+            <div class="benefit">✅ Find location history and real-time location</div>
+            <div class="benefit">✅ Easy to install on android and iPhone</div>
         </div>
-                        <div class="benefits">
-            <div class="benefit">✅ Only a phone number needed</div>
+        <div class="benefits">
+            <div class="benefit">✅ Find deleted messages and read apps like snapchat</div>
+                        <div class="benefit">✅ Record calls and screen</div>
 
-            
+            <div class="benefit">✅ 100% discreet</div>
         </div>
-<br></br>
         <div class="cta-buttons">
-            <div class="subtext">Simply enter their phone number to get started</div>
+            <div class="subtext">Get started for less than $1/day.</div>
             <br></br>
-    <a href="https://track.bzfrs.co/aff_c?offer_id=84&aff_id=21078&aff_sub=[cmc_vid]" id="click" class="cta-button">Access Their Phone Now</a>
+                <a href="https://track.mspy.click/aff_c?offer_id=2&aff_id=21078&aff_sub=[cmc_vid]" id="click" class="cta-button" style="background-color: #7CB936; " >Access Their Phone Now</a>
 
         </div>
     </div>
     <div class="container2">
         <div class="reviews">
-
+            <img src="assets/img/cheating-review.png" alt="Review 1">
+            <img src="assets/img/cheating-review2.png" alt="Review 2">
+            <img src="assets/img/cheating-review1.png" alt="Review 3">
 </div>
-
+<br></br>
+<br></br>
+                <a href="https://track.mspy.click/aff_c?offer_id=2&aff_id=21078&aff_sub=[cmc_vid]" id="click" class="cta-button" style="background-color: #7CB936; " >Access Their Phone Now</a>
 <br></br>
 <br></br>
             <div>
@@ -167,7 +159,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 
 				
 <p class="small"><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
-<p class="small">Copyright © www.americancitizenoffers.com 2025</p>
+<p class="small">Copyright © www.americancitizenoffers.com 2023</p>
 </center>
 </div>
         </div>
