--- a/main/partner/adv.html
+++ b/main/partner/adv.html
@@ -318,13 +318,15 @@
 
         <p><span class="bold-text">If you could know the truth—right now, without confrontation, without them flipping it back on you, without another sleepless night—would you finally do it?</span></p>
 
-        <p>Most people can tell if something when something is off in their relationship.</p>
+        <p>You already know something is off...</p>
         
         <p>Maybe you've caught your partner in a lie. Maybe they said something that doesn't add up. Or maybe they've just been acting different and you don't know why.</p>
 
-        <p>And if these suspicions are unresolved, it can cause serious issues. You don't know if you're right to trust them, or if you're being played like a fool.</p>
+        <p>You've asked, they've denied.</p>
 
-        <p>That voice in your head something is wrong will continue to eat away at you unless you do something.</p>
+        <p>You don't know if you're right to trust them, or if you're being played like a fool.</p>
+
+        <p>That voice in your head continues to eat away at you. Your gut has never lied to you before.</p>
         
         <img src="assets/img/sleep.jpg" alt="sleep" class="content-image">
 
@@ -334,13 +336,13 @@
 
         <p><span class="bold-text">So, what's the solution?</span></p>
 
-        <h2>What If You Could Know—Without Them Ever Finding Out?</h2>
+        <h2>What If You Could Know — Without Them Ever Finding Out?</h2>
 
         <p>Here's what changed everything for thousands of people just like you:</p>
 
         <p><span class="bold-text">A discreet app that gives you access to everything they've been hiding - and I mean everything.</span></p>
 
-        <p>This new app can track location (live and past), read texts, record phone calls, check social media (even apps like snapchat) and even reveal deleted conversations.</p>
+        <p>This new app can track location (live and past), read texts, record phone calls, checks social media (even apps like snapchat) and even reveals deleted conversations.</p>
 
         <p>If you suspect your partner is cheating or lying to you, this app is almost guaranteed to find out the truth.</p>
 
@@ -395,7 +397,7 @@
 
         <h2>Right Now, There's a Limited-Time Offer</h2>
 
-        <p>The company behind this app—mSpy—is running a rare discount that could end at any time.</p>
+        <p>The company behind this app — mSpy — is running a rare discount that could end at any time.</p>
 
         <p>They don't advertise this publicly (for obvious reasons), but right now you can get access for a fraction of the normal price.</p>
 
