--- a/main/partner/adv.html
+++ b/main/partner/adv.html
@@ -412,7 +412,7 @@
         <p>But your intuition? It's trying to protect you.</p>
 
         <div class="cta-center">
-            <a href="https://track.mspy.click/aff_c?offer_id=2&aff_id=21078&aff_sub=[cmc_vid]" class="cta-button-large">>> Get The Truth Today - Limited Time Discount <<</a>
+            <a href="https://track.mspy.click/aff_c?offer_id=2&aff_id=21078&aff_sub=[cmc_vid]" id="click" class="cta-button-large">>> Get The Truth Today - Limited Time Discount <<</a>
         </div>
 
         <p style="text-align: center; font-size: 18px; font-weight: 600; margin-top: 40px;">You're not paranoid. You're not insecure. You're just done being lied to.<br>And it's time to trust yourself again.</p>
